lang/examples/bad/DivideByZero.gt
fn main() -> int {
    print(1 / 0);
    return 0;
}
